# polynomial_sampling

./: .clang-format  BUILD  CMakeLists.txt  README.md  main.cc  mainapp  poly_sample_plan.cc  poly_sample_plan.h  test.cc  test.h
